# outbox

./: .gitignore  Dockerfile  Makefile  README.md  config.ini.example  docker-compose.yml  pyproject-client.toml  pyproject.toml  wsgi.py
database/: schema.sql
src/outbox/: __init__.py  cli.py  config.py  db.py  web.py
src/outbox/blueprints/: admin.py  admin_keys.py  admin_queue.py  admin_sql.py  api.py  auth.py
src/outbox/client/: __init__.py  client.py
src/outbox/client/backends/: base.py  http.py  local.py
src/outbox/models/: api_key.py  app_setting.py  attachment.py  message.py
src/outbox/services/: attachment_service.py  email_sender.py  export.py
src/outbox/static/css/: app.css
src/outbox/static/js/: app.js
src/outbox/templates/: base.html
src/outbox/templates/admin/: api_key_row.html  api_keys.html  index.html  message_detail.html  message_row.html  queue.html  sql.html
src/outbox/templates/auth/: login.html
src/outbox_client/: __init__.py  client.py  models.py
src/outbox_client/backends/: base.py  http.py  local.py
worker/: queue_worker.py
