[project]
name = "outbox"
version = "0.1.0"
description = "Centralized mail queue service"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0",
    "apsw>=3.45",
    "gunicorn>=23.0",
    "mistune>=3.0",
    "itsdangerous>=2.1",
    "gatekeeper",
]

[tool.uv.sources]
gatekeeper = { path = "../gatekeeper", editable = true }

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["outbox*"]
exclude = ["outbox_client*"]

[tool.setuptools.package-data]
outbox = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.ty.environment]
python-version = "3.14"
